--- a/trang2/trang2.html
+++ b/trang2/trang2.html
@@ -7,17 +7,40 @@
     <link rel="stylesheet" href="trang2.css">
 </head>
 <body>
-    <div class="body-1">
+    <div class="body">
+        <div class="body-1">
         <div class="body-logo-1">
             <img src="anh2/Logo%20Cty%20(Chuan).png" alt="Error">
         </div>
         <div class="body-title-1">
-            <div class="body-title-1-1">CÔNG TY TNHH MỘT THÀNH VIÊN</div>
-            <div class="body-title-1-2">KHAI THÁC CÔNG TRÌNH THỦY LỢI ĐA ĐỘ</div>
+            <div class="body-title-1-1">WEBSITE QUẢN LÝ DOANH NGHIỆP</div>
+            <div class="body-title-1-2">Công ty TNHH MTV khai thác công trình thủy lợi Đa Độ</div>
         </div>
+        <div class="avatar-1">
+            <img src="anh2/Background-xam-1-800x600.jpg" alt="Error">
+        </div>
+        <div class="username">Nguyễn Anh Tuấn</div>
     </div>
-    <div class="body-2">
-        
+        <div class="body-2"></div>
+        <div class="body-3">
+            <div class="body-3-1"></div>
+            <div class="body-3-2">
+                <div class="body-3-2-1"></div>
+            </div>
+            <div class="body-3-3">
+                <div class="body-3-3-1">
+                </div>
+                <div class="body-3-3-2">
+                    <div class="body-title-2-1"></div>
+                    <div class="body-title-2-2"></div>
+                    <div class="body-title-2-3"></div>
+                    <div class="body-title-2-4"></div>
+                    <div class="body-title-2-5"></div>
+                    <div class="body-title-2-6"></div>
+                </div>
+            </div>
+            <div class="body-3-4"></div>
+        </div>
     </div>
 </body>
 </html>
