--- a/trang2/trang2.html
+++ b/trang2/trang2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link rel="stylesheet" href="trang2.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
 </head>
 <body>
     <div class="body">
@@ -16,16 +17,40 @@
             <div class="body-title-1-1">WEBSITE QUẢN LÝ DOANH NGHIỆP</div>
             <div class="body-title-1-2">Công ty TNHH MTV khai thác công trình thủy lợi Đa Độ</div>
         </div>
+        <div class="nothing-1"></div>
+        <div class="body-user-ava">
         <div class="avatar-1">
             <img src="anh2/Background-xam-1-800x600.jpg" alt="Error">
         </div>
         <div class="username">Nguyễn Anh Tuấn</div>
+        </div>
     </div>
         <div class="body-2"></div>
         <div class="body-3">
             <div class="body-3-1"></div>
             <div class="body-3-2">
-                <div class="body-3-2-1"></div>
+                <div class="body-3-2-1">
+                    <div class="notice-1">
+                        <div class="notice-1-1">
+                            <img src="anh2/anh-dep-1.jpg">
+                        </div>
+                        <div class="notice-1-2">
+                            <span><i class="fa fa-bullhorn" aria-hidden="true"></i></span>
+                        <span>Thông báo:</span>
+                        <span>Công ty tuần sau được nghỉ có lương x5 nhé!</span>
+                        </div>
+                    </div>
+                    <div class="notice-1">
+                        <div class="notice-1-1">
+                            <img src="anh2/anh-dep-1.jpg">
+                        </div>
+                        <div class="notice-1-2">
+                            <span><i class="fa fa-bullhorn" aria-hidden="true"></i></span>
+                            <span>Thông báo:</span>
+                            <span>Công ty tuần sau được nghỉ có lương x5 nhé!</span>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="body-3-3">
                 <div class="body-3-3-1">
