--- a/trang2/trang2.html
+++ b/trang2/trang2.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link rel="stylesheet" href="trang2.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="button.css">
 </head>
 <body>
     <div class="body">
@@ -30,38 +33,95 @@
             <div class="body-3-1"></div>
             <div class="body-3-2">
                 <div class="body-3-2-1">
+                    <div class="notice">
+                        <div class="notice-0-1">BẢNG TIN</div>
+                        <div class="notice-0-2"></div>
+                    </div>
                     <div class="notice-1">
                         <div class="notice-1-1">
-                            <img src="anh2/anh-dep-1.jpg">
+                            <img src="anh2/anh-dep-1.jpg" alt="Error">
                         </div>
                         <div class="notice-1-2">
                             <span><i class="fa fa-bullhorn" aria-hidden="true"></i></span>
                         <span>Thông báo:</span>
-                        <span>Công ty tuần sau được nghỉ có lương x5 nhé!</span>
+                        <span><marquee scrollamount="11s">Công ty tuần sau được nghỉ có lương x5 nhé!</marquee></span>
                         </div>
                     </div>
                     <div class="notice-1">
                         <div class="notice-1-1">
-                            <img src="anh2/anh-dep-1.jpg">
+                            <img src="anh2/anh-thu-2.jpg" alt="Error">
                         </div>
                         <div class="notice-1-2">
                             <span><i class="fa fa-bullhorn" aria-hidden="true"></i></span>
                             <span>Thông báo:</span>
-                            <span>Công ty tuần sau được nghỉ có lương x5 nhé!</span>
+                            <span><marquee scrollamount="11s">Bộ sưu tập 51 hình nền và hình nền Ultra HD PC hàng đầu có sẵn để tải xuống miễn phí. Chúng tôi hy vọng bạn thích bộ sưu tập hình ảnh HD ngày càng tăng của chúng tôi để sử dụng làm hình nền hoặc màn hình chính cho điện thoại thông minh hoặc máy tính của bạn. Vui lòng liên hệ chúng tôi nếu bạn muốn xuất bản một PC Ultra HD hình nền trên trang web của chúng tôi.</marquee></span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="body-3-3">
                 <div class="body-3-3-1">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="anh2/carsoule-1.jpg" class="d-block w-100" alt="Error">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="anh2/carsoule-2.jpg" class="d-block w-100" alt="Error">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="anh2/carsoule-3.jpg" class="d-block w-100" alt="Error">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="body-3-3-2">
-                    <div class="body-title-2-1"></div>
-                    <div class="body-title-2-2"></div>
-                    <div class="body-title-2-3"></div>
-                    <div class="body-title-2-4"></div>
-                    <div class="body-title-2-5"></div>
-                    <div class="body-title-2-6"></div>
+                    <div class="body-3-0">
+                    <div class="body-title-3-3-2-1">
+                        <div ontouchstart="">
+                            <div class="button" style="cursor: pointer">
+                                <a >QUẢN LÝ CÔNG TRÌNH</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="body-title-3-3-2-2">
+                        <div ontouchstart="">
+                            <div class="button" style="cursor: pointer">
+                                <a >QUẢN LÝ NHÂN SỰ</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="body-title-3-3-2-3">
+                        <div ontouchstart="">
+                            <div class="button" style="cursor: pointer">
+                                <a >QUẢN LÝ TÀI SẢN</a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="body-3-0-1">
+                    <div class="body-title-3-3-2-4">
+                        <div ontouchstart="">
+                            <div class="button" style="cursor: pointer">
+                                <a >QUẢN LÝ HỒ SƠ SXKD</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="body-title-3-3-2-5">
+                        <div ontouchstart="">
+                            <div class="button" style="cursor: pointer">
+                                <a >BÁO CÁO VÀ LƯU TRỮ</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="body-title-3-3-2-6">
+                        <div ontouchstart="">
+                            <div class="button" style="cursor: pointer">
+                                <a >QUẢN LÝ HỒ SƠ KHÁC</a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
                 </div>
             </div>
             <div class="body-3-4"></div>
