--- a/trang3/trang3.html
+++ b/trang3/trang3.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -114,69 +116,57 @@
                                  <th>STT</th>
                                  <th>HẠNG MỤC</th>
                                  <th>MÔ TẢ</th>
-                                 <th>CHIA SẺ</th>
+                                 <th>DỮ LIỆU</th>
                              </tr>
                              </thead>
                              <tbody>
                              <tr>
-                                 <td>Content 1</td>
-                                 <td>Content 1</td>
-                                 <td>Content 1</td>
-                                 <td>Content 1</td>
+                                 <td>1</td>
+                                 <td style="text-align: left">MÃ CÔNG TRÌNH:</td>
+                                 <td style="text-align: left">C04</td>
+                                 <td></td>
                              </tr>
                              <tr>
-                                 <td>Content 2</td>
-                                 <td>Content 2</td>
-                                 <td>Content 2</td>
-                                 <td>Content 2</td>
+                                 <td>2</td>
+                                 <td style="text-align: left">TÊN CÔNG TRÌNH:</td>
+                                 <td style="text-align: left">Cống Trung Trang</td>
+                                 <td></td>
                              </tr>
                              <tr>
-                                 <td>Content 3</td>
-                                 <td>Content 3</td>
-                                 <td>Content 3</td>
-                                 <td>Content 3</td>
+                                 <td>3</td>
+                                 <td style="text-align: left">VỊ TRÍ/ĐỊA ĐIỂM:</td>
+                                 <td style="text-align: left">Xã Bát Trang - Huyện An Lão</td>
+                                 <td onclick="td()" style="cursor: pointer; text-decoration-line: underline">Link Map</td>
                              </tr>
                              <tr>
-                                 <td>Content 4</td>
-                                 <td>Content 4</td>
-                                 <td>Content 4</td>
-                                 <td>Content 4</td>
+                                 <td>4</td>
+                                 <td style="text-align: left">QUY MÔ</td>
+                                 <td style="text-align: left">04 cửa x 8,0m</td>
+                                 <td></td>
                              </tr>
                              <tr>
-                                 <td>Content 5</td>
-                                 <td>Content 5</td>
-                                 <td>Content 5</td>
-                                 <td>Content 5</td>
+                                 <td>5</td>
+                                 <td style="text-align: left">THIẾT BỊ:</td>
+                                 <td style="text-align: left">04 cửa x tời điện TĐ5</td>
+                                 <td></td>
                              </tr>
                              <tr>
-                                 <td>Content 6</td>
-                                 <td>Content 6</td>
-                                 <td>Content 6</td>
-                                 <td>Content 6</td>
+                                 <td>6</td>
+                                 <td style="text-align: left">CÔNG TRÌNH LIÊN QUAN</td>
+                                 <td style="text-align: left">2 Công Trình</td>
+                                 <td>
+                                     <label>
+                                         <select onclick="hp()">
+                                             <option style="cursor: pointer; text-decoration-line: underline">Kênh trước cống</option>
+                                             <option style="cursor: pointer; text-decoration-line: underline">Kênh sau cống cống</option>
+                                         </select>
+                                     </label></td>
                              </tr>
                              <tr>
-                                 <td>Content 7</td>
-                                 <td>Content 7</td>
-                                 <td>Content 7</td>
-                                 <td>Content 7</td>
-                             </tr>
-                             <tr>
-                                 <td>Content 8</td>
-                                 <td>Content 8</td>
-                                 <td>Content 8</td>
-                                 <td>Content 8</td>
-                             </tr>
-                             <tr>
-                                 <td>Content 9</td>
-                                 <td>Content 9</td>
-                                 <td>Content 9</td>
-                                 <td>Content 9</td>
-                             </tr>
-                             <tr>
-                                 <td>Content 10</td>
-                                 <td>Content 10</td>
-                                 <td>Content 10</td>
-                                 <td>Content 10</td>
+                                 <td>7</td>
+                                 <td style="text-align: left">THÔNG TIN KHÁC</td>
+                                 <td style="text-align: left">Ứng dụng KHCN</td>
+                                 <td onclick="th()" style="cursor: pointer; text-decoration-line: underline">File HS đính kèm</td>
                              </tr>
                              <tbody>
                          </table>
@@ -186,7 +176,27 @@
                              HÌNH ẢNH CÔNG TRÌNH
                          </div>
                          <div class="content-1-2-b">
-
+                             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                                 <div class="carousel-inner">
+                                     <div class="carousel-item active" data-bs-interval="10000">
+                                         <img src="anh3/4.%20Cong%20Trung%20Trang_1.jpg" class="d-block w-100" alt="...">
+                                     </div>
+                                     <div class="carousel-item" data-bs-interval="2000">
+                                         <img src="anh3/4.%20Cong%20Trung%20Trang_2.jpg" class="d-block w-100" alt="...">
+                                     </div>
+                                     <div class="carousel-item">
+                                         <img src="anh3/4.%20Cong%20Trung%20Trang_5.jpg" class="d-block w-100" alt="...">
+                                     </div>
+                                 </div>
+                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                     <span class="visually-hidden">Previous</span>
+                                 </button>
+                                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                     <span class="visually-hidden">Next</span>
+                                 </button>
+                             </div>
                          </div>
                      </div>
                  </div>
